Fix z-index for ComboBox, Dropdown and LayerLayout due to CSS variable name mismatch (#352)

--- a/packages/lab/src/combo-box-deprecated/ComboBox.css
+++ b/packages/lab/src/combo-box-deprecated/ComboBox.css
@@ -9,5 +9,5 @@
 }
 
 .uitkComboBox-listWindowRoot {
-  z-index: calc(var(--uitk-zindex-tooltip) - 1);
+  z-index: calc(var(--uitk-zIndex-tooltip) - 1);
 }
