--- a/packages/lab/src/layout/LayerLayout/LayerLayout.css
+++ b/packages/lab/src/layout/LayerLayout/LayerLayout.css
@@ -21,7 +21,7 @@
   overflow: auto;
   padding: var(--layerLayout-padding);
   box-shadow: var(--uitkLayerLayout-boxShadow, var(--layerLayout-boxShadow));
-  z-index: calc(var(--uitk-zindex-appheader) - 1);
+  z-index: calc(var(--uitk-zIndex-appheader) - 1);
 }
 
 .uitkLayerLayout-fullScreen {
